--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -24,7 +24,7 @@
     <section id="home">
         <div>
             <h1 class="home-design">Welcome</h1>
-            <p>V7 Studio & Event Management</p>
+            <p class="home-text">V7 Studio & Event Management</p>
             
 
         </div>
