--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -78,9 +78,9 @@
                     <div class="details">
                         
                         <div class="images">
-                            <img src="detail1.jpg" alt="Image 1">
-                            <img src="detail2.jpg" alt="Image 2">
-                            <img src="detail3.jpg" alt="Image 3">
+                            <img src="images/detail1.jpg" alt="Image 1">
+                            <img src="images/detail2.jpg" alt="Image 2">
+                            <img src="images/detail3.jpg" alt="Image 3">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
@@ -105,9 +105,9 @@
                     <button class="more-details">More Details</button>
                     <div class="details">
                         <div class="images">
-                            <img src="premier.jpg" alt="Image 1">
-                            <img src="basic.jpg" alt="Image 2">
-                            <img src="other-event.jpg" alt="Image 3">
+                            <img src="images/premier.jpg" alt="Image 1">
+                            <img src="images/basic.jpg" alt="Image 2">
+                            <img src="images/other-event.jpg" alt="Image 3">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
@@ -128,14 +128,14 @@
 
     <section id="contact">
         <div>
-            <img src="contact_logo.jpg" alt="instagram-logo" class="contact-img">
+            <img src="images/contact_logo.jpg" alt="instagram-logo" class="contact-img">
         </div>
         <div class="contact-container">
             <p>Contact us at:</p>
             <p>Mobile: <a href="tel:+916379916782">+91 63799 16782</a></p>
             <p>Follow us on Instagram: 
                 <a href="https://www.instagram.com/v7__studio__?igsh=eGZxYW4wc2c2cm11" target="_blank">
-                    <img src="insta-logo.png" alt="Instagram" class="instagram-logo">
+                    <img src="images/insta-logo.png" alt="Instagram" class="instagram-logo">
                 </a>
             </p>
         </div>
