--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -78,9 +78,9 @@
                     <div class="details">
                         
                         <div class="images">
-                            <img src="images/detail1.jpg" alt="Image 1">
-                            <img src="images/detail2.jpg" alt="Image 2">
-                            <img src="images/detail3.jpg" alt="Image 3">
+                            <img src="images/detail1.jpg" alt="Image 1" class="full-img">
+                            <img src="images/detail2.jpg" alt="Image 2" class="full-img">
+                            <img src="images/detail3.jpg" alt="Image 3" class="full-img">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
@@ -105,9 +105,9 @@
                     <button class="more-details">More Details</button>
                     <div class="details">
                         <div class="images">
-                            <img src="images/premier.jpg" alt="Image 1">
-                            <img src="images/basic.jpg" alt="Image 2">
-                            <img src="images/other-event.jpg" alt="Image 3">
+                            <img src="images/premier.jpg" alt="Image 1" class="full-img">
+                            <img src="images/basic.jpg" alt="Image 2" class="full-img">
+                            <img src="images/other-event.jpg" alt="Image 3" class="full-img">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
