--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -134,7 +134,7 @@
             <p>Contact us at:</p>
             <p>Mobile: <a href="tel:+916379916782">+91 63799 16782</a></p>
             <p>Follow us on Instagram: 
-                <a href="https://www.instagram.com/v7__studio__?igsh=eGZxYW4wc2c2cm11" target="_blank">
+                <a href="https://www.instagram.com/yourinstagram" target="_blank">
                     <img src="images/insta-logo.png" alt="Instagram" class="instagram-logo">
                 </a>
             </p>
