--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -24,7 +24,7 @@
     <section id="home">
         <div>
             <h1 class="home-design">Welcome</h1>
-            <p class="home-text">V7 Studio & Event Management</p>
+            <p>V7 Studio & Event Management</p>
             
 
         </div>
@@ -78,9 +78,9 @@
                     <div class="details">
                         
                         <div class="images">
-                            <img src="images/detail1.jpg" alt="Image 1" class="full-img">
-                            <img src="images/detail2.jpg" alt="Image 2" class="full-img">
-                            <img src="images/detail3.jpg" alt="Image 3" class="full-img">
+                            <img src="detail1.jpg" alt="Image 1" class="fullscreen-img">
+                            <img src="detail2.jpg" alt="Image 2" class="fullscreen-img">
+                            <img src="detail3.jpg" alt="Image 3" class="fullscreen-img">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
@@ -105,9 +105,9 @@
                     <button class="more-details">More Details</button>
                     <div class="details">
                         <div class="images">
-                            <img src="images/premier.jpg" alt="Image 1" class="full-img">
-                            <img src="images/basic.jpg" alt="Image 2" class="full-img">
-                            <img src="images/other-event.jpg" alt="Image 3" class="full-img">
+                            <img src="premier.jpg" alt="Image 1" class="fullscreen-img">
+                            <img src="basic.jpg" alt="Image 2" class="fullscreen-img">
+                            <img src="other-event.jpg" alt="Image 3" class="fullscreen-img">
                         </div>
                         <button class="book">Book Now</button>
                     </div>
