--- a/public/V7_studio.html
+++ b/public/V7_studio.html
@@ -128,14 +128,14 @@
 
     <section id="contact">
         <div>
-            <img src="images/contact_logo.jpg" alt="instagram-logo" class="contact-img">
+            <img src="contact_logo.jpg" alt="instagram-logo" class="contact-img">
         </div>
         <div class="contact-container">
             <p>Contact us at:</p>
             <p>Mobile: <a href="tel:+916379916782">+91 63799 16782</a></p>
             <p>Follow us on Instagram: 
                 <a href="https://www.instagram.com/yourinstagram" target="_blank">
-                    <img src="images/insta-logo.png" alt="Instagram" class="instagram-logo">
+                    <img src="insta-logo.png" alt="Instagram" class="instagram-logo">
                 </a>
             </p>
         </div>
